@@ -24,7 +24,6 @@ This is the plugin bundle that ARJONES uses. It is equivalent to:
   [Test::Portability]
   [Test::Kwalitee]
   [Test::Pod::No404s]
-  [Test::PodSpelling]
   [NoSmartCommentsTests]
 
   [AutoPrereqs]
@@ -64,7 +63,6 @@ use Dist::Zilla::Plugin::Clean;
 use Dist::Zilla::Plugin::NoTabsTests;
 use Dist::Zilla::Plugin::Test::Kwalitee;
 use Dist::Zilla::Plugin::Test::Pod::No404s;
-use Dist::Zilla::Plugin::Test::PodSpelling;
 use Dist::Zilla::Plugin::Test::Portability;
 use Dist::Zilla::Plugin::NoSmartCommentsTests;
 
@@ -132,11 +130,6 @@ sub configure {
             $self->push_stopwords($_);
         }
     }
-
-    # our stopwords
-    $self->push_stopwords(qw/ARJONES ARJONES's TODO/);
-    $self->add_plugins(
-        [ 'Test::PodSpelling' => { stopwords => [ $self->uniq_stopwords ] } ] );
 
     $self->add_plugins( [ PodWeaver => { config_plugin => '@ARJONES' } ] );
 
