@@ -1,4 +1,5 @@
 {{$NEXT}}
+    Remove [Test::PodSpelling] - more trouble than its worth
 
 1.120460  2012-02-15 12:53:29 Europe/London
     Add [Clean]
